Experiment with apply from: centralized-deps gradle files