@@ -185,6 +185,8 @@ task packageInstallers {
                         // Options for creating the application image
                         " --input ${distributionLibsPath}" +
 
+                        // " --module-path /home/hector/runtime/jdk/openjdk/javafx-sdk-16/lib --add-modules=javafx.controls,javafx.fxml,javafx.graphics" +
+
                         // Options for creating the application launcher
                         " --main-jar ${mainJarName}" +
                         " --main-class org.misq.application.jfx.ApplicationMain" +
